--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <nav>
             <a class="link logo" href="./index.html">Web<span class="head-span">Studio</span></a>
             <ul class="navigation-ul">
+                <li><a  href="./index.html" class="title-text">Home</a></li>
                 <li><a class="link" href="">Studio</a></li>
                 <li><a class="link" href="">Portfolio</a></li>
                 <li><a class="link" href="">Contacts</a></li>
@@ -44,22 +45,22 @@
             <ul>
                 <li>
                     <h3 class="title-text">Strategy</h3>
-                    <p class="title-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.
+                    <p class="about">Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                    <h3 class="title-text">Punctuality</h3>
+                    <p class="about">Bring the key message to the brand's audience for the best price within the shortest possible
                         time.</p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.
+                    <h3 class="title-text">Diligence</h3>
+                    <p class="about">Research and confirm brands with the strongest digital growth opportunities and minimize risk.
                     </p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                    <h3 class="title-text">Technologies</h3>
+                    <p class="about">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                 </li>
 
@@ -81,21 +82,21 @@
                         alt="A person wearing a pink knitted sweater with long brown hair, standing against a plain white background."
                         width="264">
                     <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <p class="section-team">Frontend Developer</p>
                 </li>
                 <li class="section-team">
                     <img src="./images/person3.jpg"
                         alt="A person wearing a light gray t-shirt with arms crossed, standing against a plain white background."
                         width="264">
                     <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <p class="section-team">Marketing</p>
                 </li>
                 <li class="section-team">
                     <img src="./images/person4.jpg"
                         alt="A person wearing a light blue collared dress shirt with buttons, short dark hair, standing against a plain white background."
                         width="264">
                     <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <p class="section-team">UI Designer</p>
                 </li>
             </ul>
         </section>
@@ -103,32 +104,32 @@
             <h2 class="section-portfolio title-text">Our Portfolio</h2>
             <ul>
                 <li>
-                    <img src="images/portfolio-1.jpg" alt="Banking App" width="360">
+                    <img src="./images/portfolio-1.jpg" alt="Banking App" width="360">
                     <h3 class="title-text">Banking App</h3>
                     <p>App</p>
                 </li>
                 <li>
-                    <img src="images/portfolio-2.jpg" alt="Cashless Payment">
+                    <img src="./images/portfolio-2.jpg" alt="Cashless Payment">
                     <h3 class="title-text">Cashless Payment</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="images/portfolio-3.jpg" alt="Meditation App" width="360">
+                    <img src="./images/portfolio-3.jpg" alt="Meditation App" width="360">
                     <h3 class="title-text">Meditation App</h3>
                     <p>App</p>
                 </li>
                 <li>
-                    <img src="images/portfolio-4.jpg" alt="Taxi Service" width="360">
+                    <img src="./images/portfolio-4.jpg" alt="Taxi Service" width="360">
                     <h3 class="title-text">Taxi Service</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="images/portfolio-5.jpg" alt="Screen Illustrations" width="360">
+                    <img src="./images/portfolio-5.jpg" alt="Screen Illustrations" width="360">
                     <h3 class="title-text">Screen Illustrations</h3>
                     <p>Design</p>
                 </li>
                 <li>
-                    <img src="images/portfolio-6.jpg" alt="Online Courses" width="360">
+                    <img src="./images/portfolio-6.jpg" alt="Online Courses" width="360">
                     <h3 class="title-text">Online Courses</h3>
                     <p>Marketing</p>
                 </li>
