--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav>
             <a class="link logo" href="./index.html">Web<span class="head-span">Studio</span></a>
             <ul class="navigation-ul">
-                <li><a  href="./index.html" class="title-text">Home</a></li>
+                <li><a  href="./index.html" class="title-text link">Home</a></li>
                 <li><a class="link" href="">Studio</a></li>
                 <li><a class="link" href="">Portfolio</a></li>
                 <li><a class="link" href="">Contacts</a></li>
@@ -106,32 +106,32 @@
                 <li>
                     <img src="./images/portfolio-1.jpg" alt="Banking App" width="360">
                     <h3 class="title-text">Banking App</h3>
-                    <p>App</p>
+                    <p class="portfolio">App</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio-2.jpg" alt="Cashless Payment">
+                    <img src="./images/portfolio-2.jpg" alt="Cashless Payment" width="360">
                     <h3 class="title-text">Cashless Payment</h3>
-                    <p>Marketing</p>
+                    <p class="portfolio">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/portfolio-3.jpg" alt="Meditation App" width="360">
                     <h3 class="title-text">Meditation App</h3>
-                    <p>App</p>
+                    <p class="portfolio">App</p>
                 </li>
                 <li>
                     <img src="./images/portfolio-4.jpg" alt="Taxi Service" width="360">
                     <h3 class="title-text">Taxi Service</h3>
-                    <p>Marketing</p>
+                    <p class="portfolio">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/portfolio-5.jpg" alt="Screen Illustrations" width="360">
                     <h3 class="title-text">Screen Illustrations</h3>
-                    <p>Design</p>
+                    <p class="portfolio">Design</p>
                 </li>
                 <li>
                     <img src="./images/portfolio-6.jpg" alt="Online Courses" width="360">
                     <h3 class="title-text">Online Courses</h3>
-                    <p>Marketing</p>
+                    <p class="portfolio">Marketing</p>
                 </li>
             </ul>
         </section>
