--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <a class="link logo" href="./index.html">Web<span class="head-span">Studio</span></a>
             <ul class="navigation-ul">
                 <li><a  href="./index.html" class="title-text link">Home</a></li>
-                <li><a class="link" href="">Studio</a></li>
-                <li><a class="link" href="">Portfolio</a></li>
-                <li><a class="link" href="">Contacts</a></li>
+                <li><a class="link title-text" href="">Studio</a></li>
+                <li><a class="link title-text" href="">Portfolio</a></li>
+                <li><a class="link title-text" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="socials">
@@ -74,28 +74,28 @@
                     <img src="./images/person1.jpg"
                         alt="A person wearing a light-blue long-sleeve shirt, with arms crossed, standing against a plain light-colored wall"
                         width="264">
-                    <h3>Mark Guerrero</h3>
+                    <h3 class="title-text">Mark Guerrero</h3>
                     <p class="section-team">Product Designer</p>
                 </li>
                 <li class="section-team">
                     <img src="./images/person2.jpg"
                         alt="A person wearing a pink knitted sweater with long brown hair, standing against a plain white background."
                         width="264">
-                    <h3>Tom Ford</h3>
+                    <h3 class="title-text">Tom Ford</h3>
                     <p class="section-team">Frontend Developer</p>
                 </li>
                 <li class="section-team">
                     <img src="./images/person3.jpg"
                         alt="A person wearing a light gray t-shirt with arms crossed, standing against a plain white background."
                         width="264">
-                    <h3>Camila Garcia</h3>
+                    <h3 class="title-text">Camila Garcia</h3>
                     <p class="section-team">Marketing</p>
                 </li>
                 <li class="section-team">
                     <img src="./images/person4.jpg"
                         alt="A person wearing a light blue collared dress shirt with buttons, short dark hair, standing against a plain white background."
                         width="264">
-                    <h3>Daniel Wilson</h3>
+                    <h3 class="title-text">Daniel Wilson</h3>
                     <p class="section-team">UI Designer</p>
                 </li>
             </ul>
