--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
 <body>
     <header>
         <nav>
-            <a class="link logo" href="./index.html">Web<span class="head-span">Studio</span></a>
+            <a class="link logo" href="./index.html">Web<span class="head-span link">Studio</span></a>
             <ul class="navigation-ul">
-                <li><a  href="./index.html" class="title-text link">Home</a></li>
-                <li><a class="link title-text" href="">Studio</a></li>
-                <li><a class="link title-text" href="">Portfolio</a></li>
-                <li><a class="link title-text" href="">Contacts</a></li>
+                <li><a class="link navigacion-text" href="">Studio</a></li>
+                <li><a class="link navigacion-text" href="">Portfolio</a></li>
+                <li><a class="link navigacion-text" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="socials">
@@ -37,108 +36,108 @@
 
     <main>
         <section class="section-solutions">
-            <h1 class="section-solutions">Effective Solutions for Your Business</h1>
+            <h1 class="section-solutions title">Effective Solutions for Your Business</h1>
             <button class="button" type="button">Order Service</button>
         </section>
         <section>
-            <h2 class="title-text">About us</h2>
+            <h2 class="headline">About us</h2>
             <ul>
                 <li>
-                    <h3 class="title-text">Strategy</h3>
-                    <p class="about">Our goal is to identify the business problem to walk away with the perfect and creative solution.
+                    <h3 class="subtitle">Strategy</h3>
+                    <p class="text">Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
                 <li>
-                    <h3 class="title-text">Punctuality</h3>
-                    <p class="about">Bring the key message to the brand's audience for the best price within the shortest possible
+                    <h3 class="subtitle">Punctuality</h3>
+                    <p class="text">Bring the key message to the brand's audience for the best price within the shortest possible
                         time.</p>
                 </li>
                 <li>
-                    <h3 class="title-text">Diligence</h3>
-                    <p class="about">Research and confirm brands with the strongest digital growth opportunities and minimize risk.
+                    <h3 class="subtitle">Diligence</h3>
+                    <p class="text">Research and confirm brands with the strongest digital growth opportunities and minimize risk.
                     </p>
                 </li>
                 <li>
-                    <h3 class="title-text">Technologies</h3>
-                    <p class="about">Design practice focused on digital experiences. We bring forth a deep passion for
+                    <h3 class="subtitle">Technologies</h3>
+                    <p class="text">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                 </li>
 
             </ul>
         </section>
 
-        <section class="section-team title-text">
-            <h2 class="section-team title-text">Our Team</h2>
+        <section class="section-team">
+            <h2 class="headline">Our Team</h2>
             <ul>
                 <li class="section-team">
                     <img src="./images/person1.jpg"
                         alt="A person wearing a light-blue long-sleeve shirt, with arms crossed, standing against a plain light-colored wall"
                         width="264">
-                    <h3 class="title-text">Mark Guerrero</h3>
-                    <p class="section-team">Product Designer</p>
+                    <h3 class="subtitle">Mark Guerrero</h3>
+                    <p class=" text text-team">Product Designer</p>
                 </li>
                 <li class="section-team">
                     <img src="./images/person2.jpg"
                         alt="A person wearing a pink knitted sweater with long brown hair, standing against a plain white background."
                         width="264">
-                    <h3 class="title-text">Tom Ford</h3>
-                    <p class="section-team">Frontend Developer</p>
+                    <h3 class="subtitle">Tom Ford</h3>
+                    <p class="text text-team">Frontend Developer</p>
                 </li>
                 <li class="section-team">
                     <img src="./images/person3.jpg"
                         alt="A person wearing a light gray t-shirt with arms crossed, standing against a plain white background."
                         width="264">
-                    <h3 class="title-text">Camila Garcia</h3>
-                    <p class="section-team">Marketing</p>
+                    <h3 class="subtitle">Camila Garcia</h3>
+                    <p class="text text-team">Marketing</p>
                 </li>
                 <li class="section-team">
                     <img src="./images/person4.jpg"
                         alt="A person wearing a light blue collared dress shirt with buttons, short dark hair, standing against a plain white background."
                         width="264">
-                    <h3 class="title-text">Daniel Wilson</h3>
-                    <p class="section-team">UI Designer</p>
+                    <h3 class="subtitle">Daniel Wilson</h3>
+                    <p class="text text-team">UI Designer</p>
                 </li>
             </ul>
         </section>
         <section>
-            <h2 class="section-portfolio title-text">Our Portfolio</h2>
+            <h2 class="headline">Our Portfolio</h2>
             <ul>
                 <li>
                     <img src="./images/portfolio-1.jpg" alt="Banking App" width="360">
-                    <h3 class="title-text">Banking App</h3>
-                    <p class="portfolio">App</p>
+                    <h3 class="subtitle">Banking App</h3>
+                    <p class="text">App</p>
                 </li>
                 <li>
                     <img src="./images/portfolio-2.jpg" alt="Cashless Payment" width="360">
-                    <h3 class="title-text">Cashless Payment</h3>
-                    <p class="portfolio">Marketing</p>
+                    <h3 class="subtitle">Cashless Payment</h3>
+                    <p class="text">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/portfolio-3.jpg" alt="Meditation App" width="360">
-                    <h3 class="title-text">Meditation App</h3>
-                    <p class="portfolio">App</p>
+                    <h3 class="subtitle">Meditation App</h3>
+                    <p class="text">App</p>
                 </li>
                 <li>
                     <img src="./images/portfolio-4.jpg" alt="Taxi Service" width="360">
-                    <h3 class="title-text">Taxi Service</h3>
-                    <p class="portfolio">Marketing</p>
+                    <h3 class="subtitle">Taxi Service</h3>
+                    <p class="text">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/portfolio-5.jpg" alt="Screen Illustrations" width="360">
-                    <h3 class="title-text">Screen Illustrations</h3>
-                    <p class="portfolio">Design</p>
+                    <h3 class="subtitle">Screen Illustrations</h3>
+                    <p class="text">Design</p>
                 </li>
                 <li>
                     <img src="./images/portfolio-6.jpg" alt="Online Courses" width="360">
-                    <h3 class="title-text">Online Courses</h3>
-                    <p class="portfolio">Marketing</p>
+                    <h3 class="subtitle">Online Courses</h3>
+                    <p class="text">Marketing</p>
                 </li>
             </ul>
         </section>
     </main>
 
     <footer class="footer">
-        <a class="link logo" href="./index.html">Web<span class="foot-span">Studio</span></a>
+        <a class="link logo" href="./index.html">Web<span class="foot-span link">Studio</span></a>
         <p class="foot-text">Increase the flow of customers and sales for your business with digital marketing & growth
             solutions.</p>
     </footer>
