--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <nav>
             <a class="link logo" href="./index.html">Web<span class="head-span link">Studio</span></a>
             <ul class="navigation-ul">
+                <li><a href="./index.html" class="link">Home</a></li>
                 <li><a class="link navigacion-text" href="">Studio</a></li>
                 <li><a class="link navigacion-text" href="">Portfolio</a></li>
                 <li><a class="link navigacion-text" href="">Contacts</a></li>
