--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav>
         <a class="link logo" href="./index.html">Web<span class="head-span link">Studio</span></a>
         <ul class="navigation-ul">
-            <li><a href="./index.html" class="link home-text">Home</a></li>
+            <li><a href="./index.html" class="link navigacion-text">Home</a></li>
             <li><a class="link navigacion-text" href="">Studio</a></li>
             <li><a class="link navigacion-text" href="">Portfolio</a></li>
             <li><a class="link navigacion-text" href="">Contacts</a></li>
@@ -28,8 +28,8 @@
     </nav>
         <address class="socials">
             <ul>
-                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li><a class="link address-text" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link address-text" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
 
